added jwt support for openapi spec
